[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Character/Character.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Labels/DebugLabel.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Objects/InteracterComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Character/CharacterStateMachine.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Objects/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Objects/Sword.tscn" type="PackedScene" id=6]
[ext_resource path="res://LabelBackgroundTheme.tres" type="Theme" id=7]
[ext_resource path="res://jessesans.jpg" type="Texture" id=8]
[ext_resource path="res://Scenes/Objects/HealthBar.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "death"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=12]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hurtbox:active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "death"
length = 0.2

[sub_resource type="Animation" id=4]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Hurtbox:active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("InvincibilityTimer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[node name="Character" type="KinematicBody2D" groups=["characters"]]
collision_layer = 4161
collision_mask = 8
script = ExtResource( 1 )
i_frames = 1.0

[node name="Camera" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 8.0

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, -7.15256e-07 )
scale = Vector2( 0.0514469, 0.0523732 )
texture = ExtResource( 8 )

[node name="SpriteEffectPlayer" type="AnimationPlayer" parent="Sprite"]
anims/RESET = SubResource( 11 )
anims/death = SubResource( 9 )
anims/hurt = SubResource( 10 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="UILayer" instance=ExtResource( 9 )]
visible = false
rect_scale = Vector2( 0.743549, 0.050791 )

[node name="DebugLabel" type="Label" parent="UILayer"]
visible = false
theme = ExtResource( 7 )
script = ExtResource( 2 )

[node name="InteracterComponent" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 8192

[node name="DashCooldownTimer" type="Timer" parent="."]
pause_mode = 1
process_mode = 0
one_shot = true

[node name="InDashTimer" type="Timer" parent="."]
pause_mode = 1
process_mode = 0
one_shot = true

[node name="Hurtbox" parent="." groups=["character hurtboxes"] instance=ExtResource( 5 )]
collision_layer = 260
collision_mask = 1040
__meta__ = {
"_edit_pinned_properties_": [ "active" ]
}
active = true

[node name="HurtboxShape" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 7 )
anims/death = SubResource( 8 )
anims/hurt = SubResource( 4 )

[node name="Sword" parent="." instance=ExtResource( 6 )]
position = Vector2( 8, 0 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="InvincibilityTimer" type="Timer" parent="."]
pause_mode = 1
process_mode = 0
one_shot = true

[connection signal="timeout" from="DashCooldownTimer" to="." method="set" binds= [ "dash_in_cooldown", false ]]
[connection signal="timeout" from="InDashTimer" to="." method="set" binds= [ "in_dash", false ]]
[connection signal="area_entered" from="Hurtbox" to="StateMachine" method="_on_CharacterHurtbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_CharacterAnimationPlayer_animation_finished"]
[connection signal="timeout" from="InvincibilityTimer" to="StateMachine" method="_on_InvincibilityTimer_timeout"]

[editable path="Hurtbox"]
